# pcapack

./: .gitignore  ChangeLog  DESCRIPTION  NAMESPACE  README  README.md  cleanup  config.h.in  configure.ac
R/: assert.r  cov.r  fastmap.r  ffpca.r  pca.r  pcapack-package.R  predict.r  randsvd.r  scale.r  svd.r  utils.r  wrappers_cov.r  wrappers_fastmap.r  wrappers_pca.r  wrappers_scale.r  wrappers_svd.r
benchmark/: cov.r  pca.r  scale.r  svd.r
benchmarks/: scale.r  svd.r
inst/: CITATION
inst/benchmarks/: pca.r
inst/doc/: build_pdf.sh  pbdPROF-guide.Rnw
inst/doc/include/: .jss.bst.swp  00-acknowledgement.aux  00-acknowledgement.tex  00-copyright.tex  01-introduction.aux  01-introduction.tex  02-installation.tex  03-faq.tex  jss.bst  pbdPROF.bib  style.tex
inst/tests/: fastmap.r  pca.r
man/: PCAPACK-package.Rd  cma.Rd  cov.Rd  pca.Rd  scale.Rd  svd.Rd
src/: CMakeLists.txt  Makefile  cov.c  fastmap.c  ffpca.h  ffpca_dists.c  ffpca_fastmap.c  ffpca_pca.c  ffpca_randsvd.c  pca.c  pcapack.h  predict.c  randsvd.c  scale.c  svd.c  utils.c
src/_oldmake/: Makevars.in
src/pcapack/: CMakeLists.txt  README
src/pcapack/_oldmake/: Makefile.in  cleanup  config.h.in  configure  configure.ac
src/pcapack/bench/: Makefile  benchmark.h  cov.c  prcomp.c  xpose.c
src/pcapack/include/: fastmap.h  pca.h  pcapack.h  rand.h  rand_svd.h
src/pcapack/src/: distances.f90  fastmap.c  fastmap.f90  fastmap_mod.f90  lapack.h  matrix.h  misc.h  modelmat.c  omp.h  pca.c  pca.f90  pca_mod.f90  pcapack.h  rand_svd.f90  randsvd.c  randsvd_mod.f90  svd.c  svd.f90  svd_mod.f90
src/pcapack/src/matlib/: crossprod.c  distances.c  dnrm2.c  eig.c  inverse.c  matlib.h  matmult.c  matrix.h  qr.c  svd.c  symmetrize.c  xpose.c
src/pcapack/src/rand/: constants.h  rand.h  rand_normal.c  rand_tab.c  rand_tab_gen.c  rand_uniform.c  rng_interface.h  samplers.c
src/pcapack/src/rand/old/: rand.c  rand.h  rand_mt.c  rand_normal.c  rand_tab.c  rand_tab.h
src/pcapack/src/sumstats/: correlation.c  covariance.c  covariance.f90  covariance_utils.f90  crossprod.c  means.c  means.f90  scale.c  sumstats.h  sweeps.c  sweeps.f90  variances.c  variances.f90
src/pcapack/src/utils/: Rspecial.c  cbool.f90  distances.c  distances.f90  dnrm2.c  float_equals.f90  inverse.c  lapack.f90  matmult.c  matprinter.c  rank.c  rank.f90  rank.h  rank_.c  sgns.f90  stolen_blas.f  utils.h  xpose.c
src/pcapack/src/utils/debug/: compare_mats.c  debug.h
src/pcapack/src/utils/subsetter/: subset.c  utils.c
src/pcapack/test/: Makefile  covariance.f90  float_equals.f90  pca  pca.c  scale.c  sgns.f90
src/pcapack/test/old/: CMakeLists.txt  distances.f90  means.f90  pca  pca.f90  sgns.f90
test/: cov.r  pca.r  scale.r  svd.r
tests/: all  cma.r  cov.r  pca.r  run  scale.r  svd.r
